WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259986
[PlayStation] Fix build after
266683@main
https://bugs.webkit.org/show_bug.cgi?id=259986
Summary
[PlayStation] Fix build after 266683@main
Stephan Szabo
Reported
2023-08-09 11:31:03 PDT
After
266683@main
we were seeing issues with use of OptionSet in RenderStyle.h as we only had a forward declaration.
Attachments
Add attachment
proposed patch, testcase, etc.
Stephan Szabo
Comment 1
2023-08-09 11:34:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16530
EWS
Comment 2
2023-08-09 12:54:39 PDT
Committed
266736@main
(241927320742): <
https://commits.webkit.org/266736@main
> Reviewed commits have been landed. Closing PR #16530 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-08-09 12:55:14 PDT
<
rdar://problem/113645097
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug