[PlayStation] Fix build after 266683@main https://bugs.webkit.org/show_bug.cgi?id=259986

Unreviewed build fix

Add header needed to get OptionSet.

* Source/WebCore/rendering/style/RenderStyle.h:

Canonical link: https://commits.webkit.org/266736@main